src/test/success/function_call_expression.egern
func test(): int {
    return 4
}
var a = test()
print(a)
