src/test/fail/continue_break_outside_loop_fail.egern
func keywordError() {
    var a = 3
    continue
    a = 4
    break
}

keywordError()
